--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.3.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.6.0'
-    implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.google.android.gms:play-services-maps:12.0.1'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.6.1'
 
 
 }
