--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".SignUpActivity" />
         <activity android:name=".GameActivity" />
+        <activity android:name=".MapsActivity" />
         <activity
             android:name=".MenuActivity"
             android:label="@string/title_activity_menu"
